--- a/src/components/Floater.astro
+++ b/src/components/Floater.astro
@@ -5,41 +5,76 @@ import Icon from "./Icon.astro";
 const pathname = new URL(Astro.request.url).pathname;
 
 const LINKS = [
-  { name: "Home", href: "/", icon: "material-symbols-home" },
-  {
-    name: "Projects",
-    href: "/projects",
-    icon: "material-symbols-playlist-add-check",
-  },
-  {
-    name: "Tools",
-    href: "/tools",
-    icon: "material-symbols-build",
-  },
+	{ name: "Home", href: "/", icon: "material-symbols-home" },
+	{
+		name: "Projects",
+		href: "/projects",
+		icon: "material-symbols-playlist-add-check",
+	},
+	{
+		name: "Tools",
+		href: "/tools",
+		icon: "material-symbols-build",
+	},
+	{
+		name: "Blog",
+		href: "/blog",
+		icon: "material-symbols-article",
+	},
 ];
 ---
 
-<div
-  class="z-50 fixed bottom-2 flex left-1/2 -translate-x-1/2 transition-all ease-in-out card bg-opacity-80 backdrop-blur-sm backdrop-filter p-0 bg-zinc-50 dark:bg-zinc-800 dark:bg-opacity-80"
->
+<div class="flex justify-between items-center mb-10">
+  <div
+    class="flex transition-all ease-in-out gap-2"
+  >
   {
     LINKS.map((link) => (
       <a
         href={link.href}
         class:list={[
+          "text-lg font-bold uppercase tracking-widest",
           {
             "text-zinc-700 dark:text-white": pathname === link.href,
             "text-zinc-600": pathname !== link.href,
+            "underline-animation": pathname === link.href
           },
-          "flex flex-col items-center px-4 py-2 hover:text-zinc-700 hover:bg-zinc-100 active:bg-zinc-200 dark:hover:text-white dark:hover:bg-zinc-800 dark:active:bg-zinc-700",
         ]}
         title={link.name}
       >
-        <Icon id={link.icon} className="w-6 h-6" />
-        <span class="text-[10px]">{link.name}</span>
+        {link.name}
       </a>
     ))
   }
-  <div class="w-px bg-zinc-200 dark:bg-zinc-700"></div>
+  </div>
   <DarkMode />
 </div>
+
+<style>
+  .underline-animation {
+    position: relative;
+    padding-bottom: 5px;
+  }
+
+  .underline-animation::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    background-image: linear-gradient(transparent, transparent), 
+                     linear-gradient(rgb(147 51 234), rgb(147 51 234));
+    background-size: 100% 5px;
+    background-position: 0 100%;
+    background-repeat: no-repeat;
+    transition: background-size 0.5s ease-in-out;
+    rotate: -2deg;
+    animation: animateUnderline 1s;
+  }
+
+  @keyframes animateUnderline {
+    0% { background-size: 0% 5px; }
+    50% { background-size: 100% 5px; }
+  }
+</style>
