--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,6 @@ import { SOCIALS } from "../utils/constants";
 import Floater from "./Floater.astro";
 ---
 
-<Floater />
 {/*<Navbar activeUrl={route} />*/}
 <div class="flex flex-col md:flex-row items-center gap-10">
   <div class="flex flex-col">
@@ -21,6 +20,7 @@ import Floater from "./Floater.astro";
       and
       <a href="https://www.linkedin.com/in/jose-donato" target="_blank" rel="noopener noreferrer" class="link">LinkedIn</a>.
       Follow me there to stay updated!
+      My main interests are <span class="underline-animation">web development</span> and <span class="underline-animation">quant trading</span>.
       <br /> Want to have a quick chat? You can DM me on Twitter or LinkedIn, or
       <a href="mailto:zmcdonato@gmail.com" target="_blank" rel="noopener noreferrer" class="link">email me</a>.
     </p>
@@ -49,4 +49,35 @@ import Floater from "./Floater.astro";
     />
   </div>
 </div>
-<div class="h-[1px] w-full bg-zinc-600/30 dark:bg-zinc-300/50 my-10"></div>
+<div class="h-[1px] w-full bg-zinc-600/30 dark:bg-zinc-300/50 my-4"></div>
+<Floater />
+
+
+<style>
+  .underline-animation {
+    position: relative;
+    padding-bottom: 2px;
+  }
+
+  .underline-animation::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-image: linear-gradient(transparent, transparent), 
+                     linear-gradient(#155dfc, #155dfc);
+    background-size: 100% 2px;
+    background-position: 0 100%;
+    background-repeat: no-repeat;
+    transition: background-size 0.5s ease-in-out;
+    rotate: -2deg;
+    animation: animateUnderline 1s;
+  }
+
+  @keyframes animateUnderline {
+    0% { background-size: 0% 2px; }
+    50% { background-size: 100% 2px; }
+  }
+</style> 
