--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -49,7 +49,7 @@
 
 @layer base {
   body {
-    @apply bg-white dark:bg-black font-satoshi font-[420] tracking-wide text-zinc-900 dark:text-zinc-100;
+    @apply font-satoshi font-[420] tracking-wide text-zinc-900 dark:text-zinc-100;
   }
 }
 
