--- a/src/components/starwind/pagination/PaginationNext.astro
+++ b/src/components/starwind/pagination/PaginationNext.astro
@@ -1,9 +1,8 @@
 ---
-import ChevronRight from "@tabler/icons/outline/chevron-right.svg";
 import type { HTMLAttributes } from "astro/types";
 import { tv } from "tailwind-variants";
 import PaginationLink from "./PaginationLink.astro";
-
+import Icon from "@/components/Icon.astro";
 type Props = HTMLAttributes<"a"> & { size?: "sm" | "md" | "lg" | "icon" };
 
 const paginationNext = tv({ base: "group gap-1" });
@@ -18,5 +17,5 @@ const { class: className, size = "md", ...rest } = Astro.props;
 	{...rest}
 >
 	<slot />
-	<ChevronRight class="size-4 transition-transform group-hover:translate-x-1" />
+	<Icon id="material-symbols-chevron-right-rounded" className="size-4 transition-transform group-hover:translate-x-1" />
 </PaginationLink>
