--- a/src/components/starwind/pagination/PaginationPrevious.astro
+++ b/src/components/starwind/pagination/PaginationPrevious.astro
@@ -1,8 +1,8 @@
 ---
-import ChevronLeft from "@tabler/icons/outline/chevron-left.svg";
 import type { HTMLAttributes } from "astro/types";
 import { tv } from "tailwind-variants";
 import PaginationLink from "./PaginationLink.astro";
+import Icon from "@/components/Icon.astro";
 
 type Props = HTMLAttributes<"a"> & { size?: "sm" | "md" | "lg" | "icon" };
 
@@ -17,6 +17,6 @@ const { class: className, size = "md", ...rest } = Astro.props;
 	class={paginationPrevious({ class: className })}
 	{...rest}
 >
-	<ChevronLeft class="size-4 transition-transform group-hover:-translate-x-1" />
+	<Icon id="material-symbols-chevron-left-rounded" className="size-4 transition-transform group-hover:-translate-x-1" />
 	<slot />
 </PaginationLink>
