adds gift helper

--- a/src/components/DarkMode.astro
+++ b/src/components/DarkMode.astro
@@ -4,7 +4,7 @@ import Icon from "./Icon.astro";
 
 <button
   id="theme-toggle"
-  class="cursor-pointer flex flex-col items-center px-4 py-2 text-zinc-600 hover:text-zinc-700 hover:bg-zinc-100 active:bg-zinc-200 dark:hover:text-white dark:hover:bg-zinc-800 dark:active:bg-zinc-700"
+  class="rounded cursor-pointer flex flex-col items-center p-2 text-zinc-600 hover:text-zinc-700 hover:bg-zinc-100 active:bg-zinc-200 dark:hover:text-white dark:hover:bg-zinc-800 dark:active:bg-zinc-700"
   title="Toggle Dark Mode"
   aria-label="Toggle dark mode"
 >
