--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import "@/styles/global.css";
 import "@/styles/starwind.css";
+import Posthog from "@/components/Posthog.astro";
 
 interface Props {
 	seo?: SEOProps;
@@ -56,7 +57,8 @@ const ogImageUrl = "/og_image.png";
     <meta name="theme-color" content="#ffffff" />
     <meta name="generator" content={Astro.generator} />
     <link rel="sitemap" href="/sitemap-index.xml" />
-    <meta name="keywords" content="josé, donato, fullstack, openbb" />
+    <meta name="keywords" content="josé donato, fullstack, openbb" />
+    <Posthog />
     <SEO
       {...seo}
       title={seo?.title ?? "José Donato"}
@@ -75,10 +77,7 @@ const ogImageUrl = "/og_image.png";
         image: ogImageUrl,
       }}
     />
-    <script
-      src="https://beamanalytics.b-cdn.net/beam.min.js"
-      data-token="e9cd5cf6-7481-47ba-9cfd-9e92573aedfb"
-      async></script>
+    
   </head>
   <body>
     <div class="_bg-effect"></div>
